Some UI changes & Bug Fix

--- a/css/main.css
+++ b/css/main.css
@@ -679,7 +679,7 @@ hr {
 }
 
 .navbar .navbar-brand img {
-  width: 130px
+  width: 60px
 }
 
 .navbar .navbar-brand svg {
@@ -706,7 +706,7 @@ hr {
 
 @media (max-width:767.98px) {
   .navbar .navbar-brand img {
-    width: 90px
+    width: 60px
   }
   .navbar .navbar-menu {
     -ms-flex-direction: column;
@@ -1444,7 +1444,7 @@ hr {
 }
 
 #portfolio .portfolio-section .filter-control {
-  margin-bottom: 16px;
+  margin-bottom: 55px;
   text-align: center
 }
 
@@ -1495,7 +1495,9 @@ hr {
 }
 
 #portfolio .portfolio-section .portfolio-grid .portfolio-wrapper>.img-fluid {
-  width: 100%
+  width: 1000px;
+  height: 222px;
+  border: 2px solid blue;
 }
 
 #portfolio .portfolio-section .portfolio-grid .portfolio-wrapper .item-content {
@@ -1982,4 +1984,13 @@ hr {
   .lightbox-content-1 .content-info-1 .single-info-1:nth-last-child(-n+2) {
     margin-bottom: 10px
   }
+}
+
+
+
+
+#portfolio .portfolio-section .filter-control>li.tab-active, #portfolio .portfolio-section .filter-control>li:hover {
+  color: #4b4fff;
+  font-size: 25px;
+  font-weight: 700;
 }
